# fast-phase-type-distributions

./: CMakeLists.txt  README.md  bbst.c  bbst.h  coal.c  coal.h  dist.c  dist.h  mat.c  mat.h  phdist.c  phdist.h  run_build_kingman.c  run_cdf_consts.c  run_cutoff.c  run_im_cdf.c  run_im_cdf_full.c  run_im_exp.c  run_im_full_prob_exp.c  run_im_mat.c  run_im_ss_state_size.c  run_left_prob.c  run_lmvu.c  run_num_coals_prob.c  run_pure_cutoff.c  run_time.c  sampling.c  sampling.h  test.c  utils.c  utils.h
cmd/: run_build_kingman.c  run_cdf_consts.c  run_cmp_states_rw.c  run_cutoff.c  run_disc.c  run_im_cdf.c  run_im_cdf_full.c  run_im_exp.c  run_im_full_prob_exp.c  run_im_mat.c  run_im_ss_state_size.c  run_left_prob.c  run_lmvu.c  run_num_coals_prob.c  run_pure_cutoff.c  run_time.c
program-test/: cut.rb  daditest.py  t  time_graph.rb  time_pdf_consts.rb
src/: bbst.c  coal.c  coal.h  dist.c  dist.h  sampling.c  sampling.h  utils.c  utils.h
src/test/: test_bbst.c  test_coal.c  test_sampling.c
test/: test_bbst.c  test_coal.c  test_sampling.c  test_utils.c
