cmake_minimum_required(VERSION 3.7)
project(amazephase C)

set(CMAKE_C_FLAGS "-std=c11 ${CMAKE_C_FLAGS}")
set(CMAKE_C_STANDARD 11)

set(CMAKE_BINARY_DIR .)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


SET(SOURCE_FILES bbst.h utils.h mat.h coal.h phdist.h bbst.c mat.c coal.c phdist.c dist.c dist.h utils.c sampling.c sampling.h)
add_library(amazephase ${SOURCE_FILES})
add_executable(run_lmvu run_lmvu.c)
add_executable(run_build_kingman run_build_kingman.c)
add_executable(run_time run_time.c)
add_executable(run_cdf_consts run_cdf_consts.c)
add_executable(run_pure_cutoff run_pure_cutoff.c)
add_executable(run_cutoff run_cutoff.c)
add_executable(run_left_prob run_left_prob.c)
add_executable(run_im_cdf run_im_cdf.c)
add_executable(run_im_cdf_full run_im_cdf_full.c)
add_executable(run_im_mat run_im_mat.c)
add_executable(run_im_exp run_im_exp.c)
add_executable(run_im_full_prob_exp run_im_full_prob_exp.c)
add_executable(run_num_coals_prob run_num_coals_prob.c)
add_executable(run_im_ss_state_size run_im_ss_state_size.c)
add_executable(test_bbst test/test_bbst.c)
add_executable(test_utils test/test_utils.c)
add_executable(test_coal test/test_coal.c)
add_executable(test_sampling test/test_sampling.c)

find_package(GSL REQUIRED)
target_link_libraries(amazephase m gsl gslcblas)

target_link_libraries(run_lmvu amazephase)
target_link_libraries(run_build_kingman amazephase)
target_link_libraries(run_time amazephase)
target_link_libraries(run_cdf_consts amazephase)
target_link_libraries(run_pure_cutoff amazephase)
target_link_libraries(run_cutoff amazephase)
target_link_libraries(run_left_prob amazephase)
target_link_libraries(run_im_cdf amazephase)
target_link_libraries(run_im_cdf_full amazephase)
target_link_libraries(run_im_mat amazephase)
target_link_libraries(run_im_exp amazephase)
target_link_libraries(run_im_full_prob_exp amazephase)
target_link_libraries(run_num_coals_prob amazephase)
target_link_libraries(run_im_ss_state_size amazephase)
target_link_libraries(test_bbst amazephase)
target_link_libraries(test_utils amazephase)
target_link_libraries(test_coal amazephase)
target_link_libraries(test_sampling amazephase)
